# bucket-sdk

./: .env  .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs  integration-test.env  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml
bucket-api/: README.md
bucket-api/proto/: account.proto  auth.proto  backend_api.proto  bucket.proto  bucket_permission.proto  cluster.proto  filesystem.proto  model.proto  search.proto  streaming.proto  sync.proto
examples/client-side-encryption/: Cargo.toml
src/: api.rs  captcha.rs  constants.rs  file_store_state.rs  http_request_ext.rs  lib.rs  query_client.rs  request_ext.rs  token.rs  util.rs
src/api/: account.rs  authentication.rs  bucket.rs  builder.rs  mod.rs  payment.rs
src/client/: mod.rs  native_client.rs  wasm_client.rs
src/client/grpc/: mod.rs  request_ext.rs
src/client/grpc/native/: client.rs
src/client/grpc/wasm/: client.rs
src/client/http/: http_request_ext.rs  mod.rs
src/client/http/gloo/: http.rs  http_ext.rs
src/client/http/native/: http.rs  http_ext.rs  mod.rs
src/compression/: compression.rs  decompression.rs  default_compression_chooser_handler.rs  mod.rs
src/compression/brotli/: brotli_compression_module.rs  mod.rs
src/compression/lz4/: lz4_compression_module.rs  lz4_decompression_module.rs  mod.rs
src/controller/: mod.rs  payment.rs  sharing.rs
src/controller/account/: account.rs  authentication.rs  errors.rs  mod.rs
src/controller/bucket/: bucket.rs  download_handler.rs  errors.rs  mod.rs  upload_handler.rs
src/controller/bucket/io/: file.rs  mod.rs  native_file.rs  web_file.rs
src/controller/filesystem/: bucket_filesystem.rs  mod.rs
src/dto/: account.rs  authentication.rs  bucket.rs  checkout.rs  dto.rs  mod.rs  sharing.rs
src/encryption/: encryption_chooser_handler.rs  mod.rs
src/encryption/aead/: mod.rs
src/encryption/aead/aes256/: decryption_module.rs  encryption_module.rs  mod.rs
src/encryption/aead/chacha20poly1305/: decryption_module.rs  encryption_module.rs
src/encryption/key/: derived_key.rs  master_key.rs  mod.rs
src/encryption/mte/: hash_based_signature.rs  hash_based_signature_verifier.rs  mod.rs
src/encryption_v1/: constants.rs  decryption_module.rs  encryption.rs  encryption_module.rs  hash.rs  hash_based_signature.rs  hash_based_signature_verifier.rs  mod.rs  module.rs
src/event/: event.rs
src/filesystem/: mod.rs
src/io/: file.rs  mod.rs
src/io/loading/: dataloader.rs
src/io/native/: mod.rs  native_file.rs
src/io/web/: mod.rs  web_file.rs
src/store/: mod.rs
src/stream/: mod.rs
src/sync/: event.rs
src/webhook/: mod.rs
src/wrapper/: mod.rs  payment.rs  sharing.rs
src/wrapper/bucket/: bucket.rs  errors.rs  mod.rs
src/wrapper/bucket/download/: download_handler.rs  file_download_handler_builder.rs  mod.rs
src/wrapper/bucket/upload/: file_upload_handler_builder.rs  mod.rs  upload_handler.rs
tests/: integration_test.rs
tests/common/: mod.rs
