[package]
name = "bucket-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["web"]
s3 = []
proto = []
wasm = []
# Stream API compatibility, mpeg-dash video stream support
stream = []
# Listen changes in the Storage, synchronization API support. for listening and parsing webhook events.
sync = []
# Compress files before transit. 
compression = []
# 

web = ["wasm", "proto"]
cli = ["proto", "s3", "native"]
native = [] #"dep:tokio", "dep:tokio-stream"

[dependencies]
bucket-common-types = { git = "https://github.com/Tim-Leon/bucket-common-types.git", features = [
    "secret_share_link",
    "share_link",
] }
zxcvbn = "2.2.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
url = "2.4.0"
thiserror = "1.0.60"
bitflags = "2.5.0"
sha3 = "0.10.8"
argon2 = "0.5.0"
highway = "1.1.0"
opaque-ke = { version = "3.0.0-pre.3", features = ["argon2"] }
ed25519-compact = { version = "2.0.4" }
x25519-dalek = "2.0.0"
aes-gcm = "0.10.2"
once_cell = "1.18.0"
prost = "0.12.4"
prost-types = "0.12.4"

futures = { version = "0.3", default-features = false, features = ["std"] }

anyhow = "*"
base64 = "0.22.1"
serde = "1.0.202"
bytemuck = "1.16.0"
gloo = { version = "0.11.0", features = ["futures", "net", "file", "worker"] }
zeroize = "1.6.0"
async-trait = "0.1.80"
mime = "0.3.17"
byte-unit = "5.1.4"
# zip = "0.6.6"
strum = {version = "0.26.1", features = ["derive"]}
cookie = { version = "0.18.1", features = ["private"] }
hex-literal = "0.4.1"
rust_decimal = "1.35.0"
pharos = "0.5.3"
jsonwebtoken = "9.3.0"
lunchbox = { version = "0.1.3", features = ["full-wasm"] }
brotli = { version = "6.0.0", features = [] } #"simd"

time = { version = "0.3.36", features = ["serde", "wasm-bindgen"] }
passkey = "0.2.0"
infer = "0.15.0"
pkg-version = "1.0.0"
log = "0.4.20"
prokio = "0.1.0"
email_address = "0.2.4"
mnemonic = "1.1.1"
dash-mpd = {version = "0.16.1", features = ["tokio"],optional = true}

[target.'cfg(unix)'.dependencies]
fuser = "0.14.0" # https://crates.io/crates/fuser

[target.'cfg(windows)'.dependencies]
winfsp = "0.11.3+winfsp-2.0" #https://crates.io/crates/winfsp

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "console",
    "Event",
    "FileReader",
    "File",
    "FileList",
    "HtmlInputElement",
    "Blob",
    "ReadableStream",
    "WritableStream",
] }
tonic-web-wasm-client = "0.5.1"
wasm-bindgen = "0.2.87"
tonic = { version = "0.11.0", default-features = false, features = [
    "prost",
    "codegen",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# We still need tokio as we have docs linked to it.
tokio = { version = "1.33", features = ["rt"] }
tokio-stream = { version = "0.1.14" }
tonic = { version = "0.11.0", default-features = false, features = [
    "prost",
    "codegen",
    "transport"
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.33", features = ["full"] }
tokio-stream = { version = "0.1.14" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

[dev-dependencies]
serial_test = "3.1.1"
criterion = { version = "0.5.1" } # Benchmark framework that is used to deterimne performance change, as in regresion or improvement.
pretty_assertions = "1.4.0"
trybuild = "1.0.96"

[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = [
    "prost",
] }
[build]
target = "x86_64-unknown-linux-gnu"
#target = "wasm32-unknown-unknown"
[profile.release]
# Tell 'rustc' to optimize for small code size.
opt-level = "s"
debug = false
