[package]
name = "bucket-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#default = ["web"]
s3 = []
proto = []
#wasm = []
# Stream API compatibility, mpeg-dash video stream support
stream = []
# Listen changes in the Storage, synchronization API support. for listening and parsing webhook events.
sync = []

webhook = []
# Compress files before transit. 
compression = []

encryption = []
# 

# web = ["wasm", "proto"]
# cli = ["proto", "s3", "native"]
# native = [] #"dep:tokio", "dep:tokio-stream"
# Implements a fuse compatible Filesystem that can be mounted to create a virtual disk,
# which connects directly to a predefined bucket.
fuse = []
[dependencies]
bucket-common-types = { git = "https://github.com/Tim-Leon/bucket-common-types.git", features = [
    "secret_share_link",
    "share_link",
] }
bucket-api = { git = "https://github.com/Tim-Leon/bucket-api.git", default-features = false, features = ["client-api"]}
zero-knowledge-encryption = { git = "https://github.com/Tim-Leon/zero-knowledge-encryption.git"}
zxcvbn = "3.1.0"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "bytemuck", "atomic"] }
url = "2.4.0"
thiserror = "1.0.57"
bitflags = "2.3.3"
sha3 = "0.10.8"
argon2 = "0.5.0"
highway = "1.1.0"
opaque-ke = { version = "3.0.0-pre.4", features = ["argon2"] }
x25519-dalek = "2.0.0"
once_cell = "1.18.0"
prost = "0.13.1"
prost-types = "0.13.1"

futures = { version = "0.3", default-features = false, features = ["std"] }

anyhow = "*"
#base64 = "*"
serde = "1.0.175"
bytemuck = "1.13.1"
zeroize = { version = "1.6.0" , features = ["alloc", "simd", "zeroize_derive"]}
async-trait = "0.1.72"
mime = "0.3.17"
byte-unit = "5.1.4"
# zip = "0.6.6"
strum = {version = "0.26.1", features = ["derive"]}
cookie = { version = "0.18.0", features = ["private"] }
hex-literal = "0.4.1"
rust_decimal = "1.33.1"
pharos = "0.5.3"
jsonwebtoken = "9.1.0"
lunchbox = { version = "0.1.3", features = ["full-wasm"] }
brotli = { version = "6.0.0", features = [] } #"simd"
lz4_flex = "0.11.3"
time = { version = "0.3.28", features = ["serde", "wasm-bindgen"] }
passkey = "0.2.0"
infer = "0.16.0"
pkg-version = "1.0.0"
log = "0.4.20"
prokio = "0.1.0"
email_address = "0.2.4"
mnemonic = "1.1.1"
dash-mpd = {version = "0.17.0", features = ["tokio"],optional = true}
tokio-tungstenite-wasm = "0.3.1"


base64 = "0.22.1"
rand_core = {version = "0.9.0-alpha.1" }
generic-array = { version = "1.0.0", features = ["zeroize", "alloc", "serde"] }

# Used to mlock, mprotect, memory region and zeroize on drop.
secrecy = { version = "0.8.0", features = ["alloc", "serde", "bytes"] }
# Encryption algorithms
digest = "0.11.0-pre.8"
chacha20poly1305 = { version = "0.10.1" , features = ["heapless", "alloc", "stream"]}
aes-gcm = { version = "0.10.2" , features = ["stream", "heapless", "zeroize", "arrayvec", "alloc", "aes"]}
# Signing algorithm
ed25519-compact = { version = "2.0.4" }



[target.'cfg(unix)'.dependencies]
fuser = "0.14.0" # https://crates.io/crates/fuser

[target.'cfg(windows)'.dependencies]
winfsp = "0.11.3+winfsp-2.0" #https://crates.io/crates/winfsp



[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = { version = "0.11.0", features = ["futures", "net", "file", "worker"] }
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "console",
    "Event",
    "FileReader",
    "File",
    "FileList",
    "HtmlInputElement",
    "Blob",
    "ReadableStream",
    "WritableStream",
] }
tonic-web-wasm-client = "0.6.0"
wasm-bindgen = "0.2.87"
tonic = { version = "0.12.1", default-features = false, features = [
    "prost",
    "codegen",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# We still need tokio as we have docs linked to it.
tokio = { version = "1.33", features = ["rt"] }
tokio-stream = { version = "0.1.14" }
tonic = { version = "0.12.1", default-features = false, features = [
    "prost",
    "codegen",
    "transport"
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.33", features = ["full"] }
tokio-stream = { version = "0.1.14" }
reqwest = { version = "0.12.5", features = ["default"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

[dev-dependencies]
serial_test = "3.0.0"
criterion = { version = "0.5.1" } # Benchmark framework that is used to deterimne performance change, as in regresion or improvement.
pretty_assertions = "1.4.0"
trybuild = "1.0.89"

[build-dependencies]
tonic-build = { version = "0.12.1", default-features = false, features = [
    "prost",
] }
[build]
target = "x86_64-unknown-linux-gnu"
#target = "wasm32-unknown-unknown"
[profile.release]
# Tell 'rustc' to optimize for small code size.
opt-level = "s"
debug = false
